# pi_reproduce

./: '  .devcontainer.json  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  conanfile.txt
.github/workflows/: ci.yaml  ubuntu2004.yaml
benchmarks/: CMakeLists.txt  FileNameCollection.cpp  GraphEventsCollection.cpp
cmake/: AddDPCPPTrace.cmake
doc/: advanced_tips.md  debugger_design_and_architecture.md  supported_apis.md  theory_of_operation.md
docker/: Dockerfile.ubuntu2004  gcc11.Dockerfile
include/: constants.hpp  options.hpp  trace.hpp  utils.hpp
include/debug/: AbstractDebugger.hpp
include/utils/: Buffer.hpp  Compression.hpp  MappedFile.hpp  MemoryView.hpp  MiResource.hpp  RTTI.hpp  Tracer.hpp  protobuf_stream.hpp  tls.hpp  traits.hpp
include/xpti_opencl/: api.def
lib/: CMakeLists.txt
lib/debug/host/: CMakeLists.txt  HostDebugger.cpp  HostDebugger.hpp  HostPlatform.cpp  HostPlatform.hpp  HostProcess.cpp  HostProcess.hpp  HostRegisterContext.hpp  HostThread.hpp  LLDBPlugins.def
lib/graph_dump/: CMakeLists.txt  graph_dump.cpp
lib/plugin_record/: CMakeLists.txt  record.cpp  record_handler.cpp  record_handler.hpp  write_utils.hpp
lib/plugin_replay/: CMakeLists.txt  replay.cpp
lib/system_intercept/: CMakeLists.txt  threads.cpp
lib/trace_collector/: CMakeLists.txt  Recorder.hpp  RecorderCommon.cpp  RecorderOCL.cpp  RecorderPI.cpp  collector.cpp
lib/trace_reader/: CMakeLists.txt  trace_reader.cpp  trace_reader.hpp
lib/utils/: CMakeLists.txt  Compression.cpp  MappedFile.cpp  MiResource.cpp  Tracer.cpp  options.cpp  tls_posix.cpp  trace.cpp  utils.cpp
lib/xpti_opencl/: CMakeLists.txt  layer.cpp
scripts/: graph2dot.py
src/: CMakeLists.txt  common.hpp  config.hpp.in  debug.cpp  fork.hpp  main.cpp  options.cpp  options.hpp  pack.cpp  pretty_printers.hpp  print.cpp  record.cpp  replay.cpp  trace.cpp  trace.hpp  unpack.cpp  utils.cpp  utils.hpp
src/debug_server/: CMakeLists.txt  GDBServerProtocol.cpp  GDBServerProtocol.hpp  protocol.hpp  server.cpp  server.hpp
src/stl/: CMakeLists.txt  std.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/print/: image_desc_ocl.cpp  sycl-ls.cpp
tests/record/: simple_opencl.cpp
tests/replay/: env_test.cpp  info.cpp  minimal_packed.cpp  simple_opencl.cpp
tests/trace_collector/: basic_ocl.cpp  basic_pi.cpp
tools/: CMakeLists.txt
tools/schemas/: CMakeLists.txt  api_call.proto  device_binary.proto  graph.proto
tools/trace_printer/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt
unittests/debug/host/: CMakeLists.txt  attach.cpp  launch.cpp
unittests/misc/: CMakeLists.txt  utils.cpp
unittests/options/: CMakeLists.txt  info.cpp  record.cpp
unittests/utils/: CMakeLists.txt  NativeTracer.cpp  info.cpp  record.cpp  utils.cpp
